<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewHospitalProfile"
            android:layout_width="125dp"
            android:layout_height="110dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hospital_profile" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/imageViewHospitalProfile"
            app:layout_constraintStart_toStartOf="@+id/imageViewHospitalProfile"
            app:layout_constraintTop_toBottomOf="@+id/imageViewHospitalProfile"
            app:srcCompat="@drawable/box_rectangle" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:elevation="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
            app:layout_constraintEnd_toStartOf="@+id/textViewRating"
            app:layout_constraintStart_toStartOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView10"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/imageViewCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView10"
            app:srcCompat="@drawable/box_rectangle" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewCall"
            app:layout_constraintEnd_toStartOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/imageViewCall"
            app:layout_constraintTop_toTopOf="@+id/imageViewCall"
            app:srcCompat="@drawable/phone" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/call"
            android:elevation="1dp"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewCall"
            app:layout_constraintEnd_toEndOf="@+id/imageViewCall"
            app:layout_constraintTop_toTopOf="@+id/imageViewCall"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="4.5"
            android:elevation="1dp"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
            app:layout_constraintEnd_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView10" />

        <TextView
            android:id="@+id/textViewHospitalName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/hospital_name"
            android:textColor="#8A4FFF"
            app:layout_constraintStart_toEndOf="@+id/imageViewHospitalProfile"
            app:layout_constraintTop_toTopOf="@+id/imageViewHospitalProfile" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/imageViewHospitalProfile"
            app:layout_constraintTop_toBottomOf="@+id/textViewHospitalName"
            app:srcCompat="@drawable/location" />

        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:text="@string/location"
            android:textColor="#989797"
            app:layout_constraintBottom_toBottomOf="@+id/imageView14"
            app:layout_constraintStart_toEndOf="@+id/imageView14"
            app:layout_constraintTop_toTopOf="@+id/imageView14" />

        <TextView
            android:id="@+id/textViewNumberOfDoctors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="5 Doctors"
            android:textColor="#989797"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewHospitalProfile"
            app:layout_constraintStart_toEndOf="@+id/imageViewHospitalProfile"
            app:layout_constraintTop_toBottomOf="@+id/imageView14" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>